--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,20 @@
 $primary-color: #444;
-$secondary-color: #eece18;
+$secondary-color: #347ff6;
+$show-home-image: true;
+$home-image: linear-gradient(#190631, #130f55);
+$background-opacity: 0.9;
 @mixin easeOut {
-    transition: all .5s ease-out;
+    transition: all 0.5s ease-out;
+}
+
+@mixin background {
+    @if $show-home-image {
+        &#bg-img {
+            background: $home-image;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+    }
 }
 
 * {
@@ -9,6 +22,7 @@ $secondary-color: #eece18;
 }
 
 body {
+    @include background;
     background: $primary-color;
     color: #fff;
     height: 100%;
@@ -54,11 +68,17 @@ main {
     .icons {
         margin-top: 1rem;
         a {
-            padding: .4rem;
+            padding: 0.4rem;
             &:hover {
                 color: $secondary-color;
                 @include easeOut();
             }
+        }
+    }
+    &#home {
+        overflow: hidden;
+        h1 {
+            margin-top: 20vh;
         }
     }
 }
