--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,22 +1,4 @@
-$primary-color: #444;
-$secondary-color: #347ff6;
-$show-home-image: true;
-$home-image: linear-gradient(#190631, #130f55);
-$background-opacity: 0.9;
-@mixin easeOut {
-    transition: all 0.5s ease-out;
-}
-
-@mixin background {
-    @if $show-home-image {
-        &#bg-img {
-            background: $home-image;
-            background-attachment: fixed;
-            background-size: cover;
-        }
-    }
-}
-
+@import 'config';
 * {
     box-sizing: border-box;
 }
