--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,7 +2,7 @@ $primary-color: #444;
 $secondary-color: #347ff6;
 $show-home-image: true;
 $home-image: linear-gradient(#190631, #130f55);
-$background-opacity: 0.5;
+$background-opacity: 0.2;
 @mixin easeOut {
 	transition: all 0.4s ease-out;
 }
@@ -28,5 +28,31 @@ $background-opacity: 0.5;
 			z-index: -1;
 			background: rgba($primary-color, $background-opacity);
 		}
+	}
+}
+
+//media query mixins
+
+@mixin mediaSm {
+	@media screen and (max-width: 500px) {
+		@content;
+	}
+}
+
+@mixin mediaMd {
+	@media screen and (max-width: 768px) {
+		@content;
+	}
+}
+
+@mixin mediaLg {
+	@media screen and (min-width: 769) and (max-width: 1170px) {
+		@content;
+	}
+}
+
+@mixin mediaXl {
+	@media screen and (min-width: 1171px) {
+		@content;
 	}
 }
