About me finished

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -11,7 +11,8 @@
 		width: 28px;
 		height: 3px;
 		margin: 0 0 5px 0;
-		background: white;
+		background: set-text-color($primary-color);
+
 		@include easeOut;
 	}
 
@@ -79,9 +80,7 @@
 	&-branding {
 		background: $primary-color;
 		transform: translate3d(0, 100%, 0);
-		@include easeOut;
-
-		&.show {
+		@include cubicBezier &.show {
 			//Slide in from bottom
 			transform: translate3d(0, 0, 0);
 		}
@@ -123,7 +122,7 @@
 		text-transform: uppercase;
 		padding: 1rem 0;
 		font-weight: 300;
-		color: white;
+		color: set-text-color($primary-color);
 		text-decoration: none;
 		@include easeOut;
 
