--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,5 @@
 @import 'config';
 @import 'menu';
-@import 'mobile';
 
 * {
 	box-sizing: border-box;
@@ -9,7 +8,7 @@
 body {
 	@include background;
 	background: $primary-color;
-	color: #fff;
+	color: set-text-color($primary-color);
 	height: 100%;
 	margin: 0;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -49,7 +48,8 @@ header {
 
 main {
 	padding: 4rem;
-	height: 100%;
+	//height: 100%;
+	min-height: calc(100vh - 60px);
 	.icons {
 		margin-top: 1rem;
 		a {
@@ -67,3 +67,73 @@ main {
 		}
 	}
 }
+
+.about-info {
+	display: grid;
+	grid-gap: 30px;
+	grid-template-areas:
+		'bioimage bio bio'
+		'job1 job2 job3';
+	grid-template-columns: repeat(3, 1fr);
+
+	.bio-image {
+		grid-area: bioimage;
+		margin: auto;
+		border-radius: 50%;
+		border: 5px $secondary-color solid;
+		width: 300px;
+		height: 300px;
+		background-size: cover;
+	}
+
+	.bio {
+		grid-area: bio;
+		font-size: 1.5rem;
+	}
+
+	.job-1 {
+		grid-area: job1;
+	}
+	.job-2 {
+		grid-area: job2;
+	}
+	.job-3 {
+		grid-area: job3;
+	}
+
+	.job {
+		background: lighten($primary-color, 3);
+		border-radius: 10px;
+		padding: 0.5rem;
+		border-bottom: $secondary-color 5px solid;
+		box-shadow: 0 -2px 15px rgba(0, 0, 0, 0.3);
+		text-align: justify;
+		text-align-last: center;
+	}
+
+	i {
+		padding-top: 1rem;
+
+		&.fa-cube {
+			color: #161d65;
+		}
+
+		&.fa-adobe {
+			color: #d291ff;
+		}
+
+		&.fa-file-code {
+			color: #348fb9;
+		}
+	}
+}
+
+#main-footer {
+	text-align: center;
+	padding: 1rem;
+	background: darken($primary-color, $amount: 10);
+	color: set-text-color($primary-color);
+	height: 60px;
+}
+
+@import 'mobile';
