--- a/scss/main.scss
+++ b/scss/main.scss
@@ -127,6 +127,53 @@ main {
 	}
 }
 
+//Work/Projects
+.projects {
+	display: grid;
+	grid-gap: 0.7rem;
+	grid-template-columns: repeat(3, 1fr);
+
+	img {
+		width: 100%;
+		border: 3px #fff solid;
+		border-radius: $button-border-radius;
+		filter: brightness(0.9);
+		@include easeOut;
+
+		&:hover {
+			filter: brightness(1);
+			box-shadow: $image-shadow;
+			border-color: $secondary-color;
+		}
+	}
+}
+
+//Button Styles
+.btn {
+	display: block;
+	padding: 0.5rem 1rem;
+	border: 0;
+	margin-bottom: 0.3rem;
+	border-radius: $button-border-radius;
+
+	&:hover {
+		background: $secondary-color;
+		color: set-text-color($secondary-color);
+	}
+}
+
+.btn-dark {
+	@extend .btn;
+	background: darken($primary-color, 7);
+	color: #fff;
+}
+
+.btn-light {
+	@extend .btn;
+	background: lighten($primary-color, 60);
+	color: #222;
+}
+
 #main-footer {
 	text-align: center;
 	padding: 1rem;
