--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -3,7 +3,7 @@ $secondary-color: #5149bb;
 $text-dark-color: #14142c;
 $text-light-color: #e4e4e4;
 $show-home-image: true;
-$home-image: linear-gradient(#190631, #130f55);
+$home-image: linear-gradient(to bottom, transparent, #130f55), url('/dist/img/bg0.png');
 $background-opacity: 0.1;
 $image-shadow: inset 4px 4px 5px #000, 4px 4px 15px #000;
 $button-border-radius: 5px;
@@ -21,8 +21,6 @@ $image-border-radius: 50%;
 	@if $show-home-image {
 		&#bg-img {
 			background: $home-image;
-			background-attachment: fixed;
-			background-size: cover;
 		}
 		&:after {
 			content: '';
@@ -60,7 +58,7 @@ $image-border-radius: 50%;
 }
 
 @mixin mediaLg {
-	@media screen and (min-width: 769) and (max-width: 1170px) {
+	@media screen and (max-width: 1170px) {
 		@content;
 	}
 }
