--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -9,6 +9,34 @@ $image-shadow: inset 4px 4px 5px #000, 4px 4px 15px #000;
 $button-border-radius: 5px;
 $image-border-radius: 50%;
 
+//=======================================================================Scroll bar
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-track {
+	background: $primary-color;
+}
+
+::-webkit-scrollbar-corner {
+	color: rgb(255, 255, 255);
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 5px;
+	background: linear-gradient(to bottom, $primary-color 0%, $secondary-color 100%);
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: linear-gradient(
+		to bottom,
+		lighten($primary-color, 4) 0%,
+		lighten($secondary-color, 4) 100%
+	);
+}
+
+//=======x=========x==========x=============x============x=========x===========Scroll bar
+
 @mixin easeOut {
 	transition: all 0.4s ease-out;
 }
