--- a/scss/main.scss
+++ b/scss/main.scss
@@ -42,6 +42,13 @@ header {
 	width: 100%;
 }
 
+#zigzag {
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	z-index: -1;
+}
+
 .text-secondary {
 	color: $secondary-color;
 }
